# TofesGenPoc

./: .dockerignore  .env.example  .gitignore  Architecture.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
docs/: E2E.md
docs/superpowers/plans/: 2026-07-08-plan1-foundation.md  2026-07-08-plan2-extraction.md  2026-07-08-plan3-generation-render.md  2026-07-13-image-edit-pivot.md  2026-07-13-react-ui-refactor.md
docs/superpowers/specs/: 2026-07-08-doc2tests-design.md  2026-07-13-image-edit-pivot-design.md  2026-07-13-ui-react-refactor-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  flow.ts  hooks.ts  sse.test.ts  sse.ts  types.ts
frontend/src/components/: AppShell.tsx  Diagnostics.tsx  Gallery.tsx  LiveStatus.tsx  LogsPanel.tsx  ReviewTable.test.tsx  ReviewTable.tsx  Stepper.tsx  UploadZone.tsx  VariantsTable.test.tsx  VariantsTable.tsx
frontend/src/store/: ui.ts
frontend/src/views/: ArchiveView.tsx  BatchView.tsx  SingleView.tsx  SourceFlow.tsx  SourceOutputs.tsx  StoreView.tsx
output/ui-47518/: record_0000.docx  record_0000.html  record_0001.docx  record_0001.html  record_0002.docx  record_0002.html  record_0003.docx  record_0003.html  record_0004.docx  record_0004.html  record_0005.docx  record_0005.html  record_0006.docx  record_0006.html  record_0007.docx  record_0007.html  record_0008.docx  record_0008.html  record_0009.docx  record_0009.html  record_0010.docx  record_0010.html  record_0011.docx  record_0011.html  record_0012.docx  record_0012.html  record_0013.docx  record_0013.html  record_0014.docx  record_0014.html  record_0015.docx  record_0015.html  record_0016.docx  record_0016.html  record_0017.docx  record_0017.html  record_0018.docx  record_0018.html  record_0019.docx  record_0019.html
src/doc2tests/: __init__.py
src/doc2tests/api/: __init__.py  app.py  deps.py  jobs.py  main.py  schemas.py  status.py  workspace.py
src/doc2tests/common/: json_utils.py  logging.py  slug.py
src/doc2tests/contracts/: __init__.py  batch.py  enums.py  records.py  state.py  template.py
src/doc2tests/coverage/: report.py
src/doc2tests/db/: models.py  repo.py
src/doc2tests/deid/: classify.py  detect.py
src/doc2tests/generate/: data_agent.py  population.py  relations.py  strategies.py
src/doc2tests/imagegen/: conditions.py  edit.py
src/doc2tests/ingest/: grounded.py  loaders.py  ocr_boxes.py  parse.py  rasterize.py
src/doc2tests/orchestrator/: batch.py  config.py  graph.py
src/doc2tests/providers/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
src/doc2tests/render/: canonical.py  docx.py  docxutil.py  html.py  layout.py  overlay.py  run.py  style.py
src/doc2tests/schema/: infer.py
src/doc2tests/template/: anchor.py  build.py
src/doc2tests/ui/: app.py  helpers.py
src/doc2tests/validators/: __init__.py  contact.py  dates.py  gush_helka.py  israeli_id.py
tests/: conftest.py
tests/api/: conftest.py  test_archive.py  test_routes.py  test_store.py  test_units.py
tests/common/: test_json_utils.py  test_slug.py
tests/contracts/: test_enums.py  test_state.py  test_template.py
tests/coverage/: test_report.py
tests/db/: test_repo.py
tests/deid/: test_classify.py  test_detect.py
tests/extraction/: test_live_openai.py  test_pipeline.py
tests/generate/: test_data_agent.py  test_population.py  test_relations.py  test_strategies.py
tests/imagegen/: test_conditions.py  test_edit.py
tests/ingest/: test_grounded.py  test_loaders.py  test_parse.py  test_rasterize.py
tests/orchestrator/: test_batch.py  test_graph.py  test_live_e2e.py
tests/providers/: test_base.py  test_factory.py  test_ollama_provider.py  test_openai_provider.py
tests/render/: test_canonical.py  test_docx.py  test_html.py  test_layout.py  test_overlay.py  test_run.py
tests/schema/: test_infer.py
tests/template/: test_anchor.py  test_build.py
tests/ui/: test_helpers.py
tests/validators/: test_contact.py  test_dates.py  test_gush_helka.py  test_israeli_id.py  test_registry.py
