[project]
name = "doc2tests"
version = "0.1.0"
description = "Document -> canonical template -> QA test population -> filled documents"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "requests>=2.32",
    "jinja2>=3.1.6",
    "python-docx>=1.2.0",
    "faker>=40.28.1",
    "langgraph>=1.2.8",
    "streamlit>=1.59.1",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "python-multipart>=0.0.32",
    "docxtpl>=0.20.2",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "pillow>=12.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc2tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI dependency-injection idiom requires File()/Form() calls in defaults
"src/doc2tests/api/main.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["docx.*", "docxtpl.*", "fitz", "pytesseract.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
# only collect test functions; avoids grabbing domain enums like TestClass
python_classes = []
filterwarnings = [
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
]
