[project]
name = "doc2tests"
version = "0.1.0"
description = "Document -> canonical template -> QA test population -> filled documents"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "openai>=2.44",
    "requests>=2.32",
    "faker>=40.28.1",
    "langgraph>=1.2.8",
    "streamlit>=1.59.1",
    "pymupdf>=1.28.0",
    "pillow>=12.3.0",
    "python-docx>=1.2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc2tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["docx.*", "fitz"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
# only collect test functions; avoids grabbing domain enums like TestClass
python_classes = []
filterwarnings = [
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
]
